Option to add subcategories to categores in categories.php

--- a/css/base.css
+++ b/css/base.css
@@ -99,6 +99,15 @@ body {
     font-size: 0.75rem;
 }
 
+.headSubcategories {
+    list-style: none;
+    padding: 6px 18px;
+}
+
+.headSubcategories li {
+    padding: 6px 0px;
+}
+
 .small {
     font-size: 0.9rem;
 }
