Added simple user/group authentication system
 - added 3 default user groups: 1=admin, 2=guest, 3=user
 - if no user exists, a new admin account can be created on first visit on main page
 - admins can create new user accounts on the new settings page
 - all other new user accounts needs to be activated using the invitation mail or activation link, where a password can be set
 - passwords are stored in hashed form only by using PHP's password_hash function using the PASSWORD_DEFAULT algorithm (currently using bcrypt)
 - a new password can be set, if forgotten, using the password restore function in login screen
 - mails are being sent using PHP's mail function, if not available or blocked, mail sending can be disabled on settings page
 - mails can only be sent if a mail sender address was set on settings page

--- a/css/base.css
+++ b/css/base.css
@@ -239,3 +239,21 @@ a.far:hover {
     z-index: 1;
     background-color: #f8f9fa;
 }
+
+.login-box {
+    width: 350px;
+    margin: 10% auto;
+}
+
+.login-box .input-group-text {
+    min-width: unset;
+}
+
+.login-box .input-group input, .input-group select {
+    height: unset;
+}
+
+.form-control[readonly] {
+    background-color: white;
+    cursor: no-drop;
+}
