--- a/css/base.css
+++ b/css/base.css
@@ -366,14 +366,18 @@ form[name="fieldData"] .dropDown {
     padding: 0.5em 0.75em;
     margin-left: 0.25em;
     min-width: 80%;
+    transition-property: all;
+    transition-duration: 300ms;
+    transition-delay: 0ms;
 }
 
-.dropDown:hover input:focus {
+.dropDown input::placeholder {
+    color: inherit;
+}
+
+.dropDown:hover input,
+.dropDown:hover input::placeholder {
     color: whitesmoke;
-}
-
-.dropDown .dropDownList input:focus {
-    color: #000;
 }
 
 .dropDown label {
