Make custom fields inputs in input mask italic

--- a/css/base.css
+++ b/css/base.css
@@ -586,6 +586,10 @@ form[name="fieldData"] .dropDown {
     display: inline;
 }
 
+.customFieldWrapper .form-control {
+    font-style: italic;
+}
+
 .customFieldWrapper.hidden {
     display: none;
 }
