--- a/css/base.css
+++ b/css/base.css
@@ -70,8 +70,6 @@ body {
 .input-group input,
 .input-group select {
     font-size: 0.75rem;
-    height: 100%;
-    line-height: 1.6rem;
     position: relative;
 }
 
@@ -482,10 +480,11 @@ form[name="fieldData"] .dropDown {
     margin: 0px;
     padding: 0.5em 0.75em;
     margin-left: 0.25em;
-    min-width: 95%;
+    min-width: 75%;
     transition-property: all;
     transition-duration: 300ms;
     transition-delay: 0ms;
+    outline: none;
 }
 
 .dropDown input::placeholder {
