Adding spacing to storeSrc and storeDest transfer dropdowns

--- a/css/base.css
+++ b/css/base.css
@@ -259,6 +259,10 @@ a.far:hover {
     background-color: #f8f9fa;
 }
 
+.storeSrcDiv {
+    margin-right: 21px;
+}
+
 .storageListing {
     width: 38%;
     padding-left: 1%;
