--- a/css/base.css
+++ b/css/base.css
@@ -231,7 +231,16 @@ a.far:hover {
 
 .storage-area li.alert-info .list-span:nth-child(0n+6),
 .storage-area li.list-group-item .list-span:nth-child(0n+7) {
-    min-width: 13.5%;
+    min-width: 10%;
+    margin-right: 1.5em;
+}
+
+.storage-area li.alert-info .list-span:nth-child(0n+7) {
+    min-width: 10%;
+}
+
+.storage-area li.list-group-item .list-span:nth-child(0n+8) {
+    min-width: 8%;
 }
 
 .switchStorage {
