--- a/css/base.css
+++ b/css/base.css
@@ -15,7 +15,6 @@ body {
     font-family: inherit;
 }
 
-
 .navbar {
     border-bottom: 1px solid lightgrey;
     font-size: 0.85rem;
@@ -167,6 +166,49 @@ body {
     font-size: 0.75rem;
 }
 
+.listing-hasimages {
+    cursor: pointer;
+    text-align: center;
+}
+
+.item-picture {
+    display: none;
+    visibility: hidden;
+}
+
+.item-picture.active {
+    border: 1px solid black;
+    display: inline;
+    visibility: visible;
+    position: absolute;
+    z-index: 100000;
+}
+
+.open-inline-edit,
+.save-inline-edit {
+    margin-right: 0.5em;
+    padding: 2px;
+}
+
+.open-inline-edit.active {
+    color: red;
+}
+
+.save-inline-edit {
+    margin-left: 0.5em;
+    color: black;
+}
+
+.save-inline-edit.inactive {
+    color: #aaa;
+}
+
+input.quick-edit {
+    width: 100%;
+    padding: 0px;
+    font-weight: normal;
+}
+
 .headSubcategories {
     list-style: none;
     padding: 6px 18px;
@@ -201,46 +243,50 @@ a.far:hover {
 .categories li.alert-info .list-span:nth-child(0n+2),
 .categories li.list-group-item .list-span:nth-child(0n+2) {
     min-width: 15%;
+    max-width: 15%;
 }
 
 .storage-area li.alert-info .list-span,
 .storage-area li.alert-info .list-span:nth-child(0n+1),
 .storage-area li.list-group-item .list-span:nth-child(0n+2) {
     min-width: 10%;
+    max-width: 10%;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+2),
 .storage-area li.list-group-item .list-span:nth-child(0n+3) {
     min-width: 13.5%;
+    max-width: 13.5%;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+3),
 .storage-area li.list-group-item .list-span:nth-child(0n+4) {
     min-width: 6%;
+    max-width: 6%;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+4),
 .storage-area li.list-group-item .list-span:nth-child(0n+5) {
     min-width: 15%;
+    max-width: 15%;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+5),
 .storage-area li.list-group-item .list-span:nth-child(0n+6) {
     min-width: 16%;
+    max-width: 16%;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+6),
 .storage-area li.list-group-item .list-span:nth-child(0n+7) {
     min-width: 10%;
+    max-width: 10%;
     margin-right: 1.5em;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+7) {
     min-width: 10%;
-}
-
-.storage-area li.list-group-item .list-span:nth-child(0n+8) {
-    min-width: 8%;
+    max-width: 10%;
 }
 
 .switchStorage {
@@ -331,8 +377,8 @@ ul.existingFields li {
 }
 
 .hidden {
-    visibility: hidden !important;;
-    display: none;
+    visibility: hidden !important;
+    display: none !important;
 }
 
 .nodisplay {
