--- a/css/base.css
+++ b/css/base.css
@@ -490,8 +490,8 @@ i.picture {
     visibility: visible;
     top: 0px;
     left: 0px;
-    width: 100%;
-    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
     overflow: scroll;
     text-align: center;
     background-color: rgba(225,225,225,0.8);
@@ -509,10 +509,8 @@ i.picture {
 }
 
 .imageOverlay .overlayedImaged {
-    top: 5%;
-    left: 0px;
-    height: 90%;
-    max-height: 90%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .dropDown {
