Improving image position and adding resize handler

--- a/css/base.css
+++ b/css/base.css
@@ -486,6 +486,7 @@ i.picture {
 }
 
 .imageOverlay.active {
+    position: relative;
     display: block;
     visibility: visible;
     overflow: scroll;
