--- a/css/base.css
+++ b/css/base.css
@@ -239,12 +239,15 @@ a.far:hover {
 .categories .list-span,
 .categories .list-span:nth-child(0n+1) {
     min-width: 15%;
+    max-width: 15%;
+    word-break: break-all;
 }
 
 .categories li.alert-info .list-span:nth-child(0n+2),
 .categories li.list-group-item .list-span:nth-child(0n+2) {
     min-width: 15%;
     max-width: 15%;
+    word-break: break-all;
 }
 
 .storage-area li.alert-info .list-span,
@@ -252,30 +255,35 @@ a.far:hover {
 .storage-area li.list-group-item .list-span:nth-child(0n+2) {
     min-width: 10%;
     max-width: 10%;
+    word-break: break-all;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+2),
 .storage-area li.list-group-item .list-span:nth-child(0n+3) {
     min-width: 13.5%;
     max-width: 13.5%;
+    word-break: break-all;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+3),
 .storage-area li.list-group-item .list-span:nth-child(0n+4) {
     min-width: 6%;
     max-width: 6%;
+    word-break: break-all;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+4),
 .storage-area li.list-group-item .list-span:nth-child(0n+5) {
     min-width: 15%;
     max-width: 15%;
+    word-break: break-all;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+5),
 .storage-area li.list-group-item .list-span:nth-child(0n+6) {
     min-width: 16%;
     max-width: 16%;
+    word-break: break-all;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+6),
@@ -283,11 +291,13 @@ a.far:hover {
     min-width: 10%;
     max-width: 10%;
     margin-right: 1.5em;
+    word-break: break-all;
 }
 
 .storage-area li.alert-info .list-span:nth-child(0n+7) {
     min-width: 10%;
     max-width: 10%;
+    word-break: break-all;
 }
 
 .switchStorage {
