--- a/css/base.css
+++ b/css/base.css
@@ -174,6 +174,31 @@ input.quick-edit:required:focus::placeholder {
     max-width: 70%;
 }
 
+.list-span.header.pointer {
+    cursor: pointer;
+}
+
+.list-span.header.orderup,
+.list-span.header.orderdown {
+    text-decoration: underline;
+}
+
+.list-span.header.orderup::after {
+    content: "\21CA";
+    width: 16px;
+    height: 16px;
+    position: relative;
+    right: -12px;
+}
+
+.list-span.header.orderdown::after {
+    content: "\21C8";
+    width: 16px;
+    height: 16px;
+    position: relative;
+    right: -12px;
+}
+
 .list-span a,
 .list-span i,
 .list-span img {
