Add: Export as CSV to inventory and categories view Improve php and smarty templates on the way and enforcing better idendation Use require_once and include_once not as function structure

--- a/css/base.css
+++ b/css/base.css
@@ -285,6 +285,12 @@ a.far:hover {
     text-decoration: none;
 }
 
+.categories,
+.headSubcategories,
+.storageListing {
+    clear: both;
+}
+
 .categories .list-span,
 .categories .list-span:nth-child(0n+1) {
     min-width: 15%;
@@ -418,6 +424,12 @@ div.dropdown.list-span {
 #transferButton {
     margin-top: 30px;
     margin-right: 4%;
+}
+
+.csvDownload {
+    margin-top: 30px;
+    margin-bottom: 50px;
+    float:right;
 }
 
 ul.existingFields {
