Fix css for "transfer" display tab

--- a/css/base.css
+++ b/css/base.css
@@ -391,8 +391,14 @@ div.dropdown.list-span {
     background-color: #f8f9fa;
 }
 
+.storeSrc,
 .storeSrcDiv {
     margin-right: 21px;
+}
+
+.storeSrc,
+.storeDest {
+    clear: none;
 }
 
 .storageListing {
